2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 * Deleted previous c.send lines and replaced with HTTP response msg