@@ -1,0 +1,90 @@
+import server
+
+class FakeConnection(object):
+    """
+    A fake connection class that mimics a real TCP socket for the purpose
+    of testing socket I/O.
+    """
+    def __init__(self, to_recv):
+        self.to_recv = to_recv
+        self.sent = ""
+        self.is_closed = False
+
+    def recv(self, n):
+        if n > len(self.to_recv):
+            r = self.to_recv
+            self.to_recv = ""
+            return r
+            
+        r, self.to_recv = self.to_recv[:n], self.to_recv[n:]
+        return r
+
+    def send(self, s):
+        self.sent += s
+
+    def close(self):
+        self.is_closed = True
+
+# Test a / call!
+def test_handle_connection():
+    conn = FakeConnection("GET / HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Link to the past</h1>'+ \
+                      '<a href = /content>Content</a><br>' + \
+                      '<a href = /file>File</a><br>' + \
+                      '<a href = /image>Image</a>'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+# Test a content call
+def test_handle_content_connection():
+    conn = FakeConnection("GET /content HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Khan-tent</h1>Khaannnnnnnnnnn'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+# Test a file call
+def test_handle_file_connection():
+    conn = FakeConnection("GET /file HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Let\'s go a-filing</h1> :D'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+# Test a image call
+def test_handle_image_connection():
+    conn = FakeConnection("GET /image HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>Gif</h1>Insert cute animal'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+# Test a post call
+def test_handle_post_connection():
+    conn = FakeConnection("POST / HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK\r\n' + \
+                      'Content-type: text/html\r\n' + \
+                      '\r\n' + \
+                      '<h1>GHOST!</h1>Oops, meant \"Post!\"'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
